--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db": "json-server --watch ./src/data/db.json --port 8000"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
     "sass": "^1.72.0",
     "yup": "^1.4.0"
   },
